--- a/.github/workflows/devcontainer_ci.yml
+++ b/.github/workflows/devcontainer_ci.yml
@@ -17,8 +17,8 @@ jobs:
         uses: docker/login-action@v2 
         with:
           registry: ghcr.io
-          username: ${{ github.repository_owner }}
-          password: ${{ secrets.GITHUB_TOKEN }}
+          username: ${{ github.actor }}
+          password: ${{ secrets.GH_PAT }}
 
       - name: Build and run dev container task
         uses: devcontainers/ci@v0.3
