--- a/.github/workflows/template_trivy_scan.yml
+++ b/.github/workflows/template_trivy_scan.yml
@@ -1,1 +1,43 @@
+name: '[Template] Trivy Scan'
 
+on:
+  workflow_call:
+    inputs:
+      sourcePath:
+        description: 'The source path of project to scan'
+        type: string
+        required: true
+
+jobs:
+  trivy-scan-job:
+    name: Trivy Scan
+    runs-on: ubuntu-latest
+    
+    steps:
+      # Run Trivy Scan 
+      - name: Run Trivy vulnerability scanner in repo mode
+        uses: aquasecurity/trivy-action@master
+        with:
+          scan-type: 'fs'
+          path: sourcePath
+          ignore-unfixed: true
+          format: 'sarif'
+          output: 'trivy-results.sarif'
+          severity: 'CRITICAL,HIGH'
+
+      #- name: Upload Trivy scan results to GitHub Security tab
+      #  uses: github/codeql-action/upload-sarif@v2
+      #  with:
+      #    sarif_file: 'trivy-results.sarif'
+
+      - name: Upload Trivy scan result
+        uses: actions/upload-artifact@v3
+        with:
+          name: trivy scan result
+          path: trivy-results.sarif
+    
+      - name: trivy alert
+        run: |
+          if grep -e CRITICAL -e HIGH trivy-results.sarif; then
+            exit 1
+          fi
