--- a/.github/workflows/template_trivy_scan.yml
+++ b/.github/workflows/template_trivy_scan.yml
@@ -19,6 +19,7 @@ jobs:
         uses: aquasecurity/trivy-action@master
         with:
           scan-type: 'fs'
+          scan-ref: sourcePath
           ignore-unfixed: true
           format: 'sarif'
           output: 'trivy-results.sarif'
