--- a/.github/workflows/template_trivy_scan.yml
+++ b/.github/workflows/template_trivy_scan.yml
@@ -14,6 +14,7 @@ jobs:
     runs-on: ubuntu-latest
     
     steps:
+      - run: echo ${{ github.workspace }}
       # Run Trivy Scan 
       - name: Run Trivy vulnerability scanner in repo mode
         uses: aquasecurity/trivy-action@master
