--- a/.github/workflows/template_trivy_scan.yml
+++ b/.github/workflows/template_trivy_scan.yml
@@ -15,10 +15,13 @@ jobs:
     
     steps:
       - run: echo ${{ github.workspace }}
+      - run: ls
+      - run: pwd
       # Run Trivy Scan 
       - name: Run Trivy vulnerability scanner in repo mode
         uses: aquasecurity/trivy-action@master
         with:
+
           scan-type: 'fs'
           scan-ref: '/github/workspace/'
           ignore-unfixed: true
