--- a/.github/workflows/template_trivy_scan.yml
+++ b/.github/workflows/template_trivy_scan.yml
@@ -23,7 +23,7 @@ jobs:
         with:
 
           scan-type: 'fs'
-          scan-ref: '/github/workspace/'
+          scan-ref: 'src'
           ignore-unfixed: true
           format: 'sarif'
           output: 'trivy-results.sarif'
