--- a/.github/workflows/devcontainer_ci.yml
+++ b/.github/workflows/devcontainer_ci.yml
@@ -14,6 +14,11 @@ jobs:
       - name: Checkout (GitHub)
         uses: actions/checkout@v3
 
+      - name: Call Tirvy Scan
+        uses: ./.github/workflows/template_trivy_scan.yml
+        with:
+          sourcePath: '.'
+        
       - name: Login to GitHub Container Registry
         uses: docker/login-action@v2 
         with:
@@ -26,9 +31,18 @@ jobs:
         with:
           imageName: ghcr.io/daisukei/example-devcontainer
           subFolder: '.'
-          runCmd: pytest
-      
-  call-trivy-scan:
-    uses: ./.github/workflows/template_trivy_scan.yml
-    with:
-      sourcePath: '.'
+          runCmd: pytest --doctest-modules --junitxml=junit/test-results-${{ matrix.python-version }}.xml --cov=. --cov-report=xml --cov-report=html
+
+      # テスト結果の表示
+      - name: Upload pytest test results
+        uses: actions/upload-artifact@v3
+        with:
+          name: pytest-results-${{ matrix.python-version }}
+          path: junit/test-results-${{ matrix.python-version }}.xml
+        # Use always() to always run this step to publish test results when there are test failures
+        if: ${{ always() }}
+
+#  call-trivy-scan:
+#    uses: ./.github/workflows/template_trivy_scan.yml
+#    with:
+#      sourcePath: '.'
