--- a/.github/workflows/devcontainer_ci.yml
+++ b/.github/workflows/devcontainer_ci.yml
@@ -14,11 +14,6 @@ jobs:
       - name: Checkout (GitHub)
         uses: actions/checkout@v3
 
-      - name: Call Tirvy Scan
-        uses: ./.github/workflows/template_trivy_scan.yml
-        with:
-          sourcePath: '.'
-        
       - name: Login to GitHub Container Registry
         uses: docker/login-action@v2 
         with:
@@ -42,7 +37,7 @@ jobs:
         # Use always() to always run this step to publish test results when there are test failures
         if: ${{ always() }}
 
-#  call-trivy-scan:
-#    uses: ./.github/workflows/template_trivy_scan.yml
-#    with:
-#      sourcePath: '.'
+  call-trivy-scan:
+    uses: ./.github/workflows/template_trivy_scan.yml
+    with:
+      sourcePath: '.'
