--- a/.github/workflows/devcontainer_ci.yml
+++ b/.github/workflows/devcontainer_ci.yml
@@ -26,7 +26,7 @@ jobs:
         with:
           imageName: ghcr.io/daisukei/example-devcontainer
           subFolder: '.'
-          runCmd: echo "Hello, World!" > sample.txt
+          runCmd: chmod 644 . || echo "Hello, World!" > sample.txt
 
 #          runCmd: pytest --doctest-modules --junitxml=junit/test-results-${{ matrix.python-version }}.xml --cov=./devcontainer-ci --cov-report=xml --cov-report=html
 
