--- a/.github/workflows/devcontainer_ci.yml
+++ b/.github/workflows/devcontainer_ci.yml
@@ -27,7 +27,7 @@ jobs:
           imageName: ghcr.io/daisukei/example-devcontainer
           subFolder: '.'
 #          runCmd: chmod 644 . || pytest --doctest-modules --junitxml=junit/test-results-${{ matrix.python-version }}.xml --cov=./devcontainer-ci --cov-report=xml --cov-report=html
-          runCmd: chmod 644 . || echo "Hello, World!" > sample.txt
+          runCmd: sudo chmod 644 . || echo "Hello, World!" > sample.txt
 
       # テスト結果の表示
       - name: Upload pytest test results
