--- a/.github/workflows/devcontainer_ci.yml
+++ b/.github/workflows/devcontainer_ci.yml
@@ -26,17 +26,20 @@ jobs:
         with:
           imageName: ghcr.io/daisukei/example-devcontainer
           subFolder: '.'
-          runCmd: sudo chmod 777 . || pytest --doctest-modules --junitxml=junit/test-results-${{ matrix.python-version }}.xml --cov=./devcontainer-ci --cov-report=xml --cov-report=html
+          runCmd: sudo chmod 777 . || pytest --doctest-modules --junitxml=junit/test-results.xml --cov=./devcontainer-ci --cov-report=xml --cov-report=html
           #runCmd: sudo chmod 644 . || echo "Hello, World!" > sample.txt
 
       - name: List all files and folders
         run: ls -alh
 
+      - name: JUNIT - List all files and folders
+        run: ls -alh junit
+
       - name: Upload pytest test results
         uses: actions/upload-artifact@v3
         with:
-          name: pytest-results-${{ matrix.python-version }}
-          path: junit/test-results-${{ matrix.python-version }}.xml
+          name: pytest-results
+          path: junit/test-results.xml
         # Use always() to always run this step to publish test results when there are test failures
         if: ${{ always() }}
 
