--- a/.github/workflows/devcontainer_ci.yml
+++ b/.github/workflows/devcontainer_ci.yml
@@ -32,9 +32,12 @@ jobs:
       - name: List all files and folders
         run: ls -alh
 
-      - name: JUNIT - List all files and folders
-        run: ls -alh junit
+      - name: runner - List all files and folders
+        run: ls -alh /home/runner/work/devcontainer-ci/devcontainer-ci
 
+      - name: mnt/output - List all files and folders
+        run: ls -alh /mnt/github/output
+        
       - name: Upload pytest test results
         uses: actions/upload-artifact@v3
         with:
