--- a/.github/workflows/devcontainer_ci.yml
+++ b/.github/workflows/devcontainer_ci.yml
@@ -26,7 +26,7 @@ jobs:
         with:
           imageName: ghcr.io/daisukei/example-devcontainer
           subFolder: '.'
-          runCmd: sudo chmod 777 . || pytest --doctest-modules --junitxml=junit/test-results.xml --cov=./devcontainer-ci --cov-report=xml --cov-report=html
+          runCmd: sudo chmod 777 . || pytest --doctest-modules --junitxml=junit/test-results.xml --cov=./devcontainer-ci --cov-report=xml --cov-report=html || pwd || ls -alh
           #runCmd: sudo chmod 644 . || echo "Hello, World!" > sample.txt
 
       - name: List all files and folders
