--- a/.github/workflows/devcontainer_ci.yml
+++ b/.github/workflows/devcontainer_ci.yml
@@ -42,7 +42,7 @@ jobs:
           devcontainer up --workspace-folder ./env
             #    - name: Run Pytest in Devcontainer
       - name: Run Pytest in Devcontainer
-        run: devcontainer exec --workspace-folder ${{ inputs.workspaceFolder }} pytest ./src/ship_detector/tests --doctest-modules --junitxml=junit/test-results-${{ matrix.python-version }}.xml --cov=. --cov-report=xml --cov-report=html
+        run: devcontainer exec --workspace-folder ./env pytest ./src/tests --doctest-modules --junitxml=junit/test-results-${{ matrix.python-version }}.xml --cov=. --cov-report=xml --cov-report=html
 
       - name: List all files and folders
         run: ls -alh ${{ inputs.workspaceFolder }} 
