--- a/.github/workflows/devcontainer_ci.yml
+++ b/.github/workflows/devcontainer_ci.yml
@@ -46,9 +46,8 @@ jobs:
         run: |
           devcontainer build --workspace-folder ./env --push true --image-name ghcr.io/daisukei/example-devcontainer-image
           devcontainer up --workspace-folder ./env
-            #    - name: Run Pytest in Devcontainer
       - name: Run Pytest in Devcontainer
-        run: devcontainer exec --workspace-folder ./env pytest ./src/tests --doctest-modules --junitxml=junit/test-results-${{ matrix.python-version }}.xml --cov=. --cov-report=xml --cov-report=html
+        run: devcontainer exec --workspace-folder ./env pytest ../src/tests --doctest-modules --junitxml=junit/test-results-${{ matrix.python-version }}.xml --cov=. --cov-report=xml --cov-report=html
 
 
 
