--- a/.github/workflows/devcontainer_ci.yml
+++ b/.github/workflows/devcontainer_ci.yml
@@ -51,6 +51,11 @@ jobs:
       - name: Run Pytest in Devcontainer
         run: devcontainer exec --workspace-folder ./env pytest ../src/tests --doctest-modules --junitxml=junit/test-results-${{ matrix.python-version }}.xml --cov=. --cov-report=xml --cov-report=html
 
+      - name: runner - List all files and folders
+        run: |
+          ls -l .pytest_cache
+          ls -alh 
+          
 #      - name: mnt/output - List all files and folders
 #        run: ls -alh /mnt/github/output
         
