--- a/.github/workflows/devcontainer_ci.yml
+++ b/.github/workflows/devcontainer_ci.yml
@@ -36,7 +36,7 @@ jobs:
           sudo chmod g+w ./env
           mkdir .pytest_cache
           chmod g+w .pytest_cache
-          ls -alh 
+          ls -alh
 
       - name: Install Devcontainer CLI
         run: |
@@ -49,7 +49,7 @@ jobs:
           devcontainer build --workspace-folder ./env --push true --image-name ghcr.io/daisukei/example-devcontainer-image
           devcontainer up --workspace-folder ./env
       - name: Run Pytest in Devcontainer
-        run: devcontainer exec --workspace-folder ./env pytest ../src/tests --doctest-modules --junitxml=../junit/test-results-${{ matrix.python-version }}.xml --cov=../src --cov-report=xml --cov-report=html
+        run: devcontainer exec --workspace-folder ./env pytest ../src/tests --doctest-modules --junitxml=junit/test-results-${{ matrix.python-version }}.xml --cov=../src --cov-report=xml --cov-report=html
 
       - name: runner - List all files and folders
         run: |
@@ -63,7 +63,7 @@ jobs:
         uses: actions/upload-artifact@v3
         with:
           name: pytest-results
-          path: junit/test-results.xml
+          path: ./env/junit/test-results.xml
         # Use always() to always run this step to publish test results when there are test failures
         if: ${{ always() }}
 
