--- a/.github/workflows/devcontainer_ci.yml
+++ b/.github/workflows/devcontainer_ci.yml
@@ -49,7 +49,7 @@ jobs:
           devcontainer build --workspace-folder ./env --push true --image-name ghcr.io/daisukei/example-devcontainer-image
           devcontainer up --workspace-folder ./env
       - name: Run Pytest in Devcontainer
-        run: devcontainer exec --workspace-folder ./env pytest ../src/tests --doctest-modules --junitxml=junit/test-results-${{ matrix.python-version }}.xml --cov=../src --cov-report=xml --cov-report=html
+        run: devcontainer exec --workspace-folder ./env pytest ../src/tests --doctest-modules --junitxml=junit/test-results.xml --cov=../src --cov-report=xml --cov-report=html
 
       - name: runner - List all files and folders
         run: |
