--- a/.github/workflows/devcontainer_ci.yml
+++ b/.github/workflows/devcontainer_ci.yml
@@ -39,7 +39,8 @@ jobs:
       - name: Run Pytest in Devcontainer
         run: |
           devcontainer up --workspace-folder ./env
-          devcontainer exec --workspace-folder ./env pytest ../src/tests --doctest-modules --junitxml=junit/test-results.xml --cov=../src --cov-report=xml --cov-report=html
+          devcontainer exec --workspace-folder ./env pytest ../src/tests --doctest-modules --cov=../src --cov-report=xml --cov-report=html
+        #devcontainer exec --workspace-folder ./env pytest ../src/tests --doctest-modules --junitxml=junit/test-results.xml --cov=../src --cov-report=xml --cov-report=html
 
       - name: runner - List all files and folders
         run: |
@@ -57,6 +58,19 @@ jobs:
         # Use always() to always run this step to publish test results when there are test failures
         if: ${{ always() }}
 
+      - name: Upload pytest test results(HTML)
+        uses: actions/upload-artifact@v3
+        with:
+          name: pytest-results
+          path: ./env/htmlcov
+        # Use always() to always run this step to publish test results when there are test failures
+        if: ${{ always() }}
+
+      - name: Get Cover 
+        uses: orgoro/coverage@v3.1
+        with:
+          coverageFile: ./env/coverage.xml
+          token: ${{ secrets.GH_PAT }}
 
 #      - name: Login to GitHub Container Registry
 #        uses: docker/login-action@v2 
