--- a/.github/workflows/devcontainer_ci.yml
+++ b/.github/workflows/devcontainer_ci.yml
@@ -39,7 +39,7 @@ jobs:
       - name: Run Pytest in Devcontainer
         run: |
           devcontainer up --workspace-folder ./env
-          devcontainer exec --workspace-folder ./env pytest ../src/tests --doctest-modules --cov=../src --cov-report=xml --cov-report=html
+          devcontainer exec --workspace-folder ./env pytest ../src/tests--cov=../src -v --cov-report=xml --cov-report=html
         #devcontainer exec --workspace-folder ./env pytest ../src/tests --doctest-modules --junitxml=junit/test-results.xml --cov=../src --cov-report=xml --cov-report=html
 
       - name: runner - List all files and folders
