--- a/.github/workflows/devcontainer_ci.yml
+++ b/.github/workflows/devcontainer_ci.yml
@@ -8,13 +8,15 @@ on:
 env:
   CR_PAT: '${{ secrets.GH_PAT }}'
   GHUsername:  '${{ secrets.NAITO_ACCOUNT }}'
-  
+  SPACESDK_VERSION: '0.5.0'
+
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
       - name: Check Env Values
         run: |
+            echo ${{ env.SPACESDK_VERSION }}
             echo $CR_PAT 
             echo $GHUsername
             if [[ -z "$CR_PAT" ]] || [[ -z "$GHUsername" ]]; then
